<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/main_color2"
    app:cardCornerRadius="15dp"
    app:cardElevation="0dp"
    android:layout_marginBottom="5dp"
    android:layout_marginStart="20dp"
    android:layout_marginTop="15dp"
    android:layout_marginEnd="20dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/nav_header_title"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:letterSpacing="0.1"
            android:textSize="16sp"
            android:fontFamily="@font/montserrat_semibold"
            android:textColor="@color/white" />

        <ImageView
            android:id="@+id/iv_image"
            android:layout_width="370dp"
            android:layout_height="300dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/todo"
            android:src="@drawable/test_image"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/tv_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_country"
                android:padding="10dp"
                android:letterSpacing="0.1"
                android:textSize="14sp"
                android:fontFamily="@font/montserrat_regular"
                android:textColor="@color/white"
                android:layout_weight="10"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:minWidth="60dp"
                android:layout_height="48dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_heart"
                android:background="@android:color/transparent"
                android:layout_weight="1"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>